# osso

./: .#README.md  .gitignore  CMakeLists.txt  CONTRIBUTION_GUIDELINES.md  LICENSE  README.md  install  install.sh
cura/: profile.ini
openmesh/python/: neighbors.py
openmesh/src/: calc_edge_lengths.cpp  find_vertex_neighbors.cpp
openmesh/xcode/openmesh.xcodeproj/: project.pbxproj
openmesh/xcode/openmesh.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
openmesh/xcode/openmesh.xcodeproj/project.xcworkspace/xcshareddata/: find_neighbors.xccheckout  openmesh.xccheckout  openmesh1.xccheckout
openmesh/xcode/openmesh.xcodeproj/project.xcworkspace/xcuserdata/zhao.he.xcuserdatad/: UserInterfaceState.xcuserstate
openmesh/xcode/openmesh.xcodeproj/xcuserdata/zhao.he.xcuserdatad/xcschemes/: calc_edge_lengths.xcscheme  find_vertex_neighbors.xcscheme  xcschememanagement.plist
scripts/: bucky  calc_edge_lengths  config.json  connector.py  connector.scad  find_vertex_neighbors  run.sh
src/openmesh/src/: calc_edge_lengths.cpp  find_vertex_neighbors.cpp
src/openmesh/xcode/openmesh.xcodeproj/: project.pbxproj
src/scripts/: bucky.py  connector.py  osso.py
support/test_scad_files/: test_kite.scad
tests/: test_cross.scad  test_cube.scad  test_diameter.scad
